[package]
name = "event-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
payments-contract = { path = "../payments" }
ticket-contract = { path = "../ticket" }
privacy-utils = { path = "../privacy-utils" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
