[package]
name = "ticket-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
privacy-utils = { path = "../privacy-utils" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
